@@ -20,6 +20,7 @@ git-annex (5.20150206) UNRELEASED; urgency=medium
   * Improve race recovery code when committing to git-annex branch.
   * addurl: Avoid crash if quvi is not installed, when git-annex was
     built with process-1.2
+  * bittorrent: Fix mojibake introduced in parsing arai2c progress output.
 
  -- Joey Hess <id@joeyh.name>  Fri, 06 Feb 2015 13:57:08 -0400
 
